# Group-1

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  EVIDENCE.md  PROJECT_BRIEF.md  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: Module2_Lab_Checklist.md  architecture.md  message_flow.md  scheduling_notes.md
include/: project.h  rtos_api.h
rtos/: FreeRTOSConfig.h  rtos_shim.cpp
scenario/: events.md  messages.md  scenario.md
src/: main.cpp
src/interrupts/: README.md
src/ipc/: README.md  messages.h
src/shared/: README.md  timing_shared.cpp  timing_shared.h
src/tasks/: README.md  Task B  TaskA.cpp  TaskB.cpp
src/timing/: README.md
